fixed modal on smaller screens

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -29,14 +29,12 @@
 .lightbox {
   background-color: rgba(0, 0, 0, 60%);
   cursor: pointer;
-  position: absolute;
+  position: fixed;
   display: flex;
-  justify-content: center;
-  align-items: center;
   top: 0;
   bottom: 0;
-  left: 0;
-  right: 0;
+  justify-content: center;
+  align-items: center;
 }
 
 .lightboxImageContainer {
